# cobot_kinematics

./: CMakeLists.txt  main.py  package.xml
include/cobot_kinematics/: fk.hpp  ik.hpp
src/: budi_luhur.cpp  fk.cpp  fk_node.cpp  ik.cpp  ik_node.cpp
