<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_kinematics</name>
  <version>0.0.0</version>
  <description>Kinematics Library</description>
  <maintainer email="dzulfikarsaifuddin@gmail.com">Dzulfikar Saifuddin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_parser</depend>

  <depend>sensor_msgs</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
